trunk/Archive2/af/0e53fabfd377fe/output
main.cpp: In function 'int main()':
main.cpp:8:38: warning: left shift count >= width of type [-Wshift-count-overflow]
     std::cout << ((int)pow(10,10) << ' ' << (int)2147483647;
                                      ^
main.cpp:8:50: warning: left shift count >= width of type [-Wshift-count-overflow]
     std::cout << ((int)pow(10,10) << ' ' << (int)2147483647;
                                                  ^
main.cpp:8:60: error: expected ')' before ';' token
     std::cout << ((int)pow(10,10) << ' ' << (int)2147483647;
                                                            ^
